[tool.poetry]
name = "nixos-compose"
version = "0.2.6"
description = ""
authors = ["Olivier Richard <olivier.richard@imag.fr>"]
license = "MIT"
include = [
     { path = 'examples', format = 'wheel' },
     { path = 'nix', format = 'wheel' },
     #{ path = 'tools', format = 'wheel' }
     { path = 'examples', format = 'sdist' },
     { path = 'nix', format = 'sdist'  }
     #{ path = 'tools', format = 'sdist' }
    ]

[tool.poetry.dependencies]
python = "^3.7"
halo = "^0.0.31"
ptpython = "^3.0.7"
click = ">=7.1.2"
pyinotify = "^0.9.6"
pexpect = "^4.8.0"
psutil = "^5.9.0"
PyYAML = "^6.0"
execo = "^2.6.8"
requests = "^2.27.1"
tomlkit = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = { version = "^2.6", python = "^3.6.1" }

[tool.poetry.scripts]
nixos-compose = 'nixos_compose.cli:main'
nxc = 'nixos_compose.cli:main'

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | nix
  | examples
)/
'''
[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
